--- a/backend/package.json
+++ b/backend/package.json
@@ -5,18 +5,24 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "form-data": "^4.0.0",
-    "mongoose": "^6.3.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.5",
     "multer": "^1.4.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
