--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-fileupload": "^1.4.0",
     "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^2.2.16",
     "mongoose": "^6.3.5",
     "multer": "^1.4.4"
   },
