--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^2.2.16",
     "mongoose": "^6.3.5",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.16"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
