--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,6 +1,6 @@
 {
   "/api/*": {
-    "target": "https://crud-despesas.herokuapp.com",
+    "target": "https://crud-despesas.herokuapp.com/auth/login",
     "secure": true,
     "logLevel": "debug"
   }
