--- a/proxy.config.json
+++ b/proxy.config.json
@@ -3,10 +3,6 @@
     "target": "https://crud-despesas.herokuapp.com/",
     "secure": true,
     "logLevel": "debug",
-    "changeOrigin": true,
-    "pathRewrite": {
-      "^/api/auth/login": "/api/auth/login",
-      "^/api": ""
-    }
+    "changeOrigin": true
   }
 }
