--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
+  "engines": {
+    "node": "16.14.0",
+    "npm": "8.3.1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -20,7 +24,7 @@
     "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^2.2.16",
-    "mongoose": "^6.3.5",
+    "mongoose": "5.8.13",
     "multer": "^1.4.4",
     "nodemon": "^2.0.16"
   },
