--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "engines": {
     "node": "14.17.3",
@@ -23,12 +23,13 @@
     "express-fileupload": "^1.4.0",
     "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongodb": "^2.2.16",
     "mongoose": "5.8.13",
-    "multer": "^1.4.4",
-    "nodemon": "^2.0.16"
+    "morgan-body": "^2.6.6",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.18"
   }
 }
